--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snap-test",
   "description": "",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "repository": {
     "type": "git",
     "url": "http://github.com/mstein77/snap-test.git"
@@ -24,7 +24,7 @@
   "dependencies": {
     "cli-color": "1.0.0",
     "diff": "1.4.0",
-    "http-sync": "0.1.1",
+    "http-sync-4": "1.0.0",
     "lodash": "^3.9.3",
     "md5": "2.0.0",
     "rimraf": "2.4.2"
