--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "diff": "2.1.3",
     "http-sync-4": "1.0.0",
     "lodash": "^3.9.3",
-    "rimraf": "2.4.2"
+    "rimraf": "2.4.2",
+    "stdio": "0.2.7"
   }
 }
